# Copyright (c) 2016 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

import("../webrtc.gni")

if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
  import("//third_party/jni_zero/jni_zero.gni")
} else if (is_mac) {
  import("//build/config/mac/rules.gni")
} else if (is_ios) {
  import("//build/config/ios/rules.gni")
} else if (is_linux || is_chromeos) {
  import("//build/config/linux/pkg_config.gni")
}

group("playground") {
  # This target shall build all targets in examples.
  testonly = true
  deps = []

  if (is_linux || is_mac || is_win) {
    deps += [
      ":playground_logging",
    ]
  }
}

rtc_executable("playground_logging") {
  testonly = true
  sources = [ "playground_logging/main.cc" ]
  deps = [
    "../rtc_base/:logging",
  ]
}
